# spa

./: README.md  codecov.yml  uncrustify.cfg
.github/workflows/: ci-coverage.yml  ci-lint.yml  ci-test.yml  ci-time.yml
Team11/Code11/: CMakeLists.txt  RunAllSystemTest.ps1  RunAllSystemTest.sh  autoformat.ps1  autoformat.sh
Team11/Code11/src/autotester/: CMakeLists.txt
Team11/Code11/src/autotester/src/: TestWrapper.cpp  TestWrapper.h
Team11/Code11/src/integration_testing/: CMakeLists.txt
Team11/Code11/src/integration_testing/src/PKBQPS/: TestPKBQPS.cpp
Team11/Code11/src/integration_testing/src/PKBSP/: TestPKBSP.cpp
Team11/Code11/src/integration_testing/src/PKBSP/inputs/: FollowsT_source.txt  insertAffectsMultiple.txt  insertConstant.txt  insertConstantMultiple.txt  insertFollowsMultiple.txt  insertFollowsMultipleOneLine.txt  insertIf.txt  insertIfConstantsOnly.txt  insertIfInvalidContainerOnly.txt  insertIfInvalidMissingElse.txt  insertIfInvalidMissingThen.txt  insertIfPattern.txt  insertModifiesMultiple.txt  insertModifiesMultipleOneLine.txt  insertNextMultiple.txt  insertParentsMultiple.txt  insertPatternsMultiple.txt  insertPrint.txt  insertProcedureInvalidMissingEndBrace.txt  insertProcedureInvalidNestedDefinition.txt  insertProcedureMultiple.txt  insertRead.txt  insertUsesInvalidAssignReverse.txt  insertUsesMultiple.txt  insertUsesMultipleOneLine.txt  insertVariableInvalidInvalidVariableName.txt  insertVariableMultiple.txt  insertWhile.txt  insertWhileConstantsOnly.txt  insertWhilePattern.txt  insertWithMultiple.txt
Team11/Code11/tests/: .gitignore
(+476 files in other folders)
